spacing fix for bevan

--- a/app/assets/styles/base/property-list.scss
+++ b/app/assets/styles/base/property-list.scss
@@ -77,7 +77,6 @@ bex-property-group {
             margin-bottom: 0;
             margin-right: $label-value-margin;
             font-weight: bold;
-            height: 34px;
         }
 
         .value, bex-tp-cell {
